--- a/mediatheque/src/main/webapp/css/estilo.css
+++ b/mediatheque/src/main/webapp/css/estilo.css
@@ -54,6 +54,17 @@ body {
 	background-position: 0 -45px;
 }
 
+.bordas.form-control {
+	border: none;
+	background-color: #f5f5f5;	
+	z-index: 30;
+}
+
+.editor.form-control {
+	border: none;
+	padding: 0px;
+}
+
 /*
  *  CSS abaixo para personalização da barra gerado na seguinte url
  *	https://work.smarchal.com/twbscolor/4.0.0/css/4e342effa000ffffffcac0c01 
